# autokupon

./: README.md  extract_authtoken.py  main.py  pyproject.toml  send_notification.py
.github/workflows/: daily_run.yml
